--- a/package.json
+++ b/package.json
@@ -13,22 +13,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/animations": "14.1.2",
+    "@angular/common": "14.1.2",
+    "@angular/compiler": "^14.1.2",
+    "@angular/core": "14.1.2",
+    "@angular/forms": "14.1.2",
+    "@angular/platform-browser": "14.1.2",
+    "@angular/platform-browser-dynamic": "14.1.2",
+    "@angular/router": "14.1.2",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@ionic/angular": "^6.1.9",
-    "ionic2-calendar": "^0.6.9",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "@ionic/angular": "6.2.2",
+    "@types/jasmine": "3.6.11",
+    "@types/jasminewd2": "2.0.10",
+    "@types/node": "12.20.55",
+    "ionic2-calendar": "0.6.9",
+    "rxjs": "6.6.7",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
